updated at: 2023-05-31 21:34, 【Ver.3.00】３Dモデル「空々式 狐耳尻尾」 - 空々仮想製作所 - BOOTH

--- a/VRChat/48/1067748.html
+++ b/VRChat/48/1067748.html
@@ -4,28 +4,28 @@
     <link href="/manifest.json" rel="manifest">
     <meta charset="utf-8">
     <title>
-      【Ver.3.00】３Dモデル「空々式 狐耳尻尾」 - 空々神社社務所 - BOOTH
+      【Ver.3.00】３Dモデル「空々式 狐耳尻尾」 - 空々仮想製作所 - BOOTH
     </title>
     <meta name="description" content=
-    "※Ver2からVer3に更新に伴い、ショップ文章書き換え工事中 説明不足や古い記述が混在していると思いますが、最新版を正常にダウンロードできます。 更新 2023/05/28：Ver3.00：ModularAvatar対応、VRChatAvatarDynamics対応、テクスチャー、シェーダー等色々変更、Animation変更 ●サンプル動画 Ver1紹介 https://twitter.com/KuuKuuKon/status/1054728636278956035 Ver2紹介 https://twitter.com/KuuKuuKon/status/1099275120294617089">
+    "※サムネ・画像・動画に使用されている、狐耳・尻尾を除く3Dモデル・3Dアバターは、使用例であり、同梱されていません。 画像で使用しているアバターは以下の通りです ・ポンデロニウム研究所様の3Dアバター「桔梗」 https://booth.pm/ja/items/3681787 ・むたチャンネル販売所様の3Dアバター「キッシュ」 https://booth.pm/ja/items/954376">
     <meta name="keywords" content=
     "booth, ブース, pixiv, ピクシブ, イラスト, マンガ, 創作, オンラインストア, オンラインショップ, ネットショップ, ec, ネット通販">
     <link rel="canonical" href="https://booth.pm/ja/items/1067748">
     <meta name="twitter:site" content="booth_pm">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content=
-    "【Ver.3.00】３Dモデル「空々式 狐耳尻尾」 - 空々神社社務所 - BOOTH">
+    "【Ver.3.00】３Dモデル「空々式 狐耳尻尾」 - 空々仮想製作所 - BOOTH">
     <meta name="twitter:description" content=
-    "※Ver2からVer3に更新に伴い、ショップ文章書き換え工事中 説明不足や古い記述が混在していると思いますが、最新版を正常にダウンロードできます。 更新 2023/05/28：Ver3.00：ModularAvatar対応、VRChatAvatarDynamics対応、テクスチャー、シェーダー等色々変更、Animation変更 ●サンプル動画 Ver1紹介 https://twitter.com/KuuKuuKon/status/1054728636278956035 Ver2紹介 https://twitter.com/KuuKuuKon/status/1099275120294617089">
+    "※サムネ・画像・動画に使用されている、狐耳・尻尾を除く3Dモデル・3Dアバターは、使用例であり、同梱されていません。 画像で使用しているアバターは以下の通りです ・ポンデロニウム研究所様の3Dアバター「桔梗」 https://booth.pm/ja/items/3681787 ・むたチャンネル販売所様の3Dアバター「キッシュ」 https://booth.pm/ja/items/954376">
     <meta name="twitter:image" content=
-    "https://booth.pximg.net/c/620x620/e9067cd7-09e7-438a-a716-24ff8190ff99/i/1067748/6d2e4729-6070-4ee1-a119-9998235eba68_base_resized.jpg">
+    "https://booth.pximg.net/c/620x620/e9067cd7-09e7-438a-a716-24ff8190ff99/i/1067748/ca6ac231-92cc-4db5-a3bc-e21835406a8c_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
-    "【Ver.3.00】３Dモデル「空々式 狐耳尻尾」 - 空々神社社務所 - BOOTH">
+    "【Ver.3.00】３Dモデル「空々式 狐耳尻尾」 - 空々仮想製作所 - BOOTH">
     <meta property="og:description" content=
-    "※Ver2からVer3に更新に伴い、ショップ文章書き換え工事中 説明不足や古い記述が混在していると思いますが、最新版を正常にダウンロードできます。 更新 2023/05/28：Ver3.00：ModularAvatar対応、VRChatAvatarDynamics対応、テクスチャー、シェーダー等色々変更、Animation変更 ●サンプル動画 Ver1紹介 https://twitter.com/KuuKuuKon/status/1054728636278956035 Ver2紹介 https://twitter.com/KuuKuuKon/status/1099275120294617089">
+    "※サムネ・画像・動画に使用されている、狐耳・尻尾を除く3Dモデル・3Dアバターは、使用例であり、同梱されていません。 画像で使用しているアバターは以下の通りです ・ポンデロニウム研究所様の3Dアバター「桔梗」 https://booth.pm/ja/items/3681787 ・むたチャンネル販売所様の3Dアバター「キッシュ」 https://booth.pm/ja/items/954376">
     <meta property="og:image" content=
-    "https://booth.pximg.net/c/620x620/e9067cd7-09e7-438a-a716-24ff8190ff99/i/1067748/6d2e4729-6070-4ee1-a119-9998235eba68_base_resized.jpg">
+    "https://booth.pximg.net/c/620x620/e9067cd7-09e7-438a-a716-24ff8190ff99/i/1067748/ca6ac231-92cc-4db5-a3bc-e21835406a8c_base_resized.jpg">
     <meta property="og:url" content=
     "https://booth.pm/ja/items/1067748">
     <meta name="robots" content="max-image-preview:large">
@@ -76,11 +76,11 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/caabce76a16a06cb0535.js" defer=
+    "https://asset.booth.pm/assets/64e3f7d917c54e844730.js" defer=
     "defer" nonce=
-    "mHMrzvaoQczJn+m+1AMhD/SxtGkF4fa0oYRcBVMa4qg="></script>
+    "XxdkO4OKxRCIyo+MO6qLUy0sqqaowHlnmujsIc7P36Y="></script>
     <script type="application/ld+json">
-    {"@context":"https://schema.org","@type":"Product","name":"【Ver.3.00】３Dモデル「空々式 狐耳尻尾」","description":"※Ver2からVer3に更新に伴い、ショップ文章書き換え工事中\n説明不足や古い記述が混在していると思いますが、最新版を正常にダウンロードできます。\n\n更新\n2023/05/28：Ver3.00：ModularAvatar対応、VRChatAvatarDynamics対応、テクスチャー、シェーダー等色々変更、Animation変更\n\n●サンプル動画\nVer1紹介\nhttps://twitter.com/KuuKuuKon/status/1054728636278956035\n\nVer2紹介\nhttps://twitter.com/KuuKuuKon/status/1099275120294617089\n\n\n●概要\n狐耳と尻尾の３DモデルデータとVRChat想定の設定済みUnitypackage\n\nbd様の着せ替えツール「ModularAvatar」\nhttps://modular-avatar.nadena.dev/ja/\nに対応し、適当なAvatarにポンと入れるだけで実装可能に！\nGesture(左手のみ)に反応し耳が動いたり、\n尻尾を自由に動かせたり！\n\n\n・VRChat想定(それ以外でも使用可、ただし設定は自力になります)\n・3Dデータ形式：FBX\n・ポリゴン合計：3778\n・UnityPackageに全て封入\n・ModularAvatar対応\n\n・改変自由\n・本データ、改変物の無許可の再配布、販売の禁止（要相談）\n・収益化・無償問わず動画・放送への出演可\n・本データ、改変物を再利用不可能な形で組み込んだアプリケーション、ゲームの配布・販売可\n\n詳しくは下記URLの利用規約を読んでください。\n購入した時点で同意したものとみなします。\n日本語ライセンス\nhttps://drive.google.com/file/d/1vpJIdPSKVn4aFzvvueKjEkn6QFyCmjey/view?usp=sharing\n\nLicence(English)\nhttps://drive.google.com/file/d/1OMM2O8BNokdKvaFNGJ3Kg4O0rngidLBJ/view?usp=sharing\n\n\n疑問点や問い合わせ、質問等がありましたら\nBooth上か、\nTwitter：@kuukuukon\nにご連絡ください。(Twitterのほうが反応早いです)","url":"https://booth.pm/ja/items/1067748","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/e9067cd7-09e7-438a-a716-24ff8190ff99/i/1067748/6d2e4729-6070-4ee1-a119-9998235eba68_base_resized.jpg"}
+    {"@context":"https://schema.org","@type":"Product","name":"【Ver.3.00】３Dモデル「空々式 狐耳尻尾」","description":"※サムネ・画像・動画に使用されている、狐耳・尻尾を除く3Dモデル・3Dアバターは、使用例であり、同梱されていません。\n画像で使用しているアバターは以下の通りです\n・ポンデロニウム研究所様の3Dアバター「桔梗」\nhttps://booth.pm/ja/items/3681787\n・むたチャンネル販売所様の3Dアバター「キッシュ」\nhttps://booth.pm/ja/items/954376","url":"https://booth.pm/ja/items/1067748","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/e9067cd7-09e7-438a-a716-24ff8190ff99/i/1067748/ca6ac231-92cc-4db5-a3bc-e21835406a8c_base_resized.jpg"}
     </script>
     <link rel="shortcut icon" type="image/x-icon" href=
     "https://asset.booth.pm/favicon.ico">
@@ -92,7 +92,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="mHMrzvaoQczJn+m+1AMhD/SxtGkF4fa0oYRcBVMa4qg="></script>
+    nonce="XxdkO4OKxRCIyo+MO6qLUy0sqqaowHlnmujsIc7P36Y="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -142,9 +142,9 @@
                             data-tracking="click" target="_blank"
                             rel="noopener" href=
                             "https://kuukuukon.booth.pm/"><img alt=
-                            "空々神社社務所" class=
+                            "空々仮想製作所" class=
                             "h-[24px] rounded-oval w-[24px]" src=
-                            "https://booth.pximg.net/c/48x48/users/5525003/icon_image/31c309e8-cf8f-4cfc-9495-5cbbe2f34f2c_base_resized.jpg">空々神社社務所</a>
+                            "https://booth.pximg.net/c/48x48/users/5525003/icon_image/acfaaa10-b281-4b3f-b44d-25a0f1c5a1e8_base_resized.jpg">空々仮想製作所</a>
                             <h2 class=
                             "font-bold leading-[32px] m-0 text-[24px]">
                               【Ver.3.00】３Dモデル「空々式 狐耳尻尾」
@@ -164,7 +164,7 @@
                           "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              773
+                              812
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -179,7 +179,7 @@
                           "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              773
+                              812
                             </div>
                           </div></a>
                         </div>
@@ -297,9 +297,9 @@
                             <img alt="【Ver.3.00】３Dモデル「空々式 狐耳尻尾」"
                             class="market-item-detail-item-image"
                             data-origin=
-                            "https://booth.pximg.net/e9067cd7-09e7-438a-a716-24ff8190ff99/i/1067748/6d2e4729-6070-4ee1-a119-9998235eba68.png"
+                            "https://booth.pximg.net/e9067cd7-09e7-438a-a716-24ff8190ff99/i/1067748/ca6ac231-92cc-4db5-a3bc-e21835406a8c.jpg"
                             src=
-                            "https://booth.pximg.net/e9067cd7-09e7-438a-a716-24ff8190ff99/i/1067748/6d2e4729-6070-4ee1-a119-9998235eba68_base_resized.jpg">
+                            "https://booth.pximg.net/e9067cd7-09e7-438a-a716-24ff8190ff99/i/1067748/ca6ac231-92cc-4db5-a3bc-e21835406a8c_base_resized.jpg">
                           </div>
                         </div>
                         <div>
@@ -308,9 +308,20 @@
                             <img alt="【Ver.3.00】３Dモデル「空々式 狐耳尻尾」"
                             class="market-item-detail-item-image"
                             data-lazy=
-                            "https://booth.pximg.net/e9067cd7-09e7-438a-a716-24ff8190ff99/i/1067748/c29cef05-c0a7-4029-b91f-0a74e2fe27a1_base_resized.jpg"
+                            "https://booth.pximg.net/e9067cd7-09e7-438a-a716-24ff8190ff99/i/1067748/671c851d-125d-4e6a-a104-382afbd817bd_base_resized.jpg"
                             data-origin=
-                            "https://booth.pximg.net/e9067cd7-09e7-438a-a716-24ff8190ff99/i/1067748/c29cef05-c0a7-4029-b91f-0a74e2fe27a1.png">
+                            "https://booth.pximg.net/e9067cd7-09e7-438a-a716-24ff8190ff99/i/1067748/671c851d-125d-4e6a-a104-382afbd817bd.jpg">
+                          </div>
+                        </div>
+                        <div>
+                          <div class=
+                          "market-item-detail-item-image-wrapper">
+                            <img alt="【Ver.3.00】３Dモデル「空々式 狐耳尻尾」"
+                            class="market-item-detail-item-image"
+                            data-lazy=
+                            "https://booth.pximg.net/e9067cd7-09e7-438a-a716-24ff8190ff99/i/1067748/8193313a-4dc2-4e64-bd6f-b5bab0caf96d_base_resized.jpg"
+                            data-origin=
+                            "https://booth.pximg.net/e9067cd7-09e7-438a-a716-24ff8190ff99/i/1067748/8193313a-4dc2-4e64-bd6f-b5bab0caf96d.jpg">
                           </div>
                         </div>
                         <div>
@@ -352,11 +363,15 @@
                         <a class="pointer">
                         <div class="slick-thumbnail-border">
                           <img src=
-                          "https://booth.pximg.net/c/72x72_a2_g5/e9067cd7-09e7-438a-a716-24ff8190ff99/i/1067748/6d2e4729-6070-4ee1-a119-9998235eba68_base_resized.jpg">
+                          "https://booth.pximg.net/c/72x72_a2_g5/e9067cd7-09e7-438a-a716-24ff8190ff99/i/1067748/ca6ac231-92cc-4db5-a3bc-e21835406a8c_base_resized.jpg">
                         </div></a><a class="pointer">
                         <div class="slick-thumbnail-border">
                           <img src=
-                          "https://booth.pximg.net/c/72x72_a2_g5/e9067cd7-09e7-438a-a716-24ff8190ff99/i/1067748/c29cef05-c0a7-4029-b91f-0a74e2fe27a1_base_resized.jpg">
+                          "https://booth.pximg.net/c/72x72_a2_g5/e9067cd7-09e7-438a-a716-24ff8190ff99/i/1067748/671c851d-125d-4e6a-a104-382afbd817bd_base_resized.jpg">
+                        </div></a><a class="pointer">
+                        <div class="slick-thumbnail-border">
+                          <img src=
+                          "https://booth.pximg.net/c/72x72_a2_g5/e9067cd7-09e7-438a-a716-24ff8190ff99/i/1067748/8193313a-4dc2-4e64-bd6f-b5bab0caf96d_base_resized.jpg">
                         </div></a><a class="pointer">
                         <div class="slick-thumbnail-border">
                           <img src=
@@ -376,38 +391,83 @@
                         "js-market-item-detail-description description">
                           <p class=
                           "autolink break-words font-noto-sans typography-16 whitespace-pre-line">
-                            ※Ver2からVer3に更新に伴い、ショップ文章書き換え工事中
-                            説明不足や古い記述が混在していると思いますが、最新版を正常にダウンロードできます。
-                            更新
-                            2023/05/28：Ver3.00：ModularAvatar対応、VRChatAvatarDynamics対応、テクスチャー、シェーダー等色々変更、Animation変更
-                            ●サンプル動画 Ver1紹介
-                            https://twitter.com/KuuKuuKon/status/1054728636278956035
-                            Ver2紹介
-                            https://twitter.com/KuuKuuKon/status/1099275120294617089
-                            ●概要
-                            狐耳と尻尾の３DモデルデータとVRChat想定の設定済みUnitypackage
-                            bd様の着せ替えツール「ModularAvatar」
-                            https://modular-avatar.nadena.dev/ja/
-                            に対応し、適当なAvatarにポンと入れるだけで実装可能に！
-                            Gesture(左手のみ)に反応し耳が動いたり、 尻尾を自由に動かせたり！
-                            ・VRChat想定(それ以外でも使用可、ただし設定は自力になります)
-                            ・3Dデータ形式：FBX ・ポリゴン合計：3778
-                            ・UnityPackageに全て封入 ・ModularAvatar対応
-                            ・改変自由 ・本データ、改変物の無許可の再配布、販売の禁止（要相談）
-                            ・収益化・無償問わず動画・放送への出演可
-                            ・本データ、改変物を再利用不可能な形で組み込んだアプリケーション、ゲームの配布・販売可
-                            詳しくは下記URLの利用規約を読んでください。
-                            購入した時点で同意したものとみなします。 日本語ライセンス
-                            https://drive.google.com/file/d/1vpJIdPSKVn4aFzvvueKjEkn6QFyCmjey/view?usp=sharing
-                            Licence(English)
-                            https://drive.google.com/file/d/1OMM2O8BNokdKvaFNGJ3Kg4O0rngidLBJ/view?usp=sharing
-                            疑問点や問い合わせ、質問等がありましたら Booth上か、
-                            Twitter：@kuukuukon
-                            にご連絡ください。(Twitterのほうが反応早いです)
+                            ※サムネ・画像・動画に使用されている、狐耳・尻尾を除く3Dモデル・3Dアバターは、使用例であり、同梱されていません。
+                            画像で使用しているアバターは以下の通りです
+                            ・ポンデロニウム研究所様の3Dアバター「桔梗」
+                            https://booth.pm/ja/items/3681787
+                            ・むたチャンネル販売所様の3Dアバター「キッシュ」
+                            https://booth.pm/ja/items/954376
                           </p>
                         </div>
                       </section>
-                      <div class="my-40"></div>
+                      <div class="my-40">
+                        <section class=
+                        "grid desktop:gap-40 mobile:gap-24">
+                          <section class="shop__text">
+                            <h2 class=
+                            "break-words font-bold leading-[32px] !m-0 pb-16 text-[24px] desktop:pb-8">
+                              ●3Dモデル「空々式 狐耳尻尾」Ver.3.00
+                            </h2>
+                            <p class=
+                            "break-words font-noto-sans js-autolink !m-0 !p-0 whitespace-pre-line typography-14 desktop:typography-16">
+                              狐耳と尻尾の３DモデルデータとVRChat想定の設定済みUnitypackage
+                              bd様の着せ替えツール「ModularAvatar」
+                              https://modular-avatar.nadena.dev/ja/
+                              に対応し、適当なAvatarにポンと入れるだけで実装可能に！
+                              Gesture(左手のみ)に反応し耳が動いたり、 尻尾を自由に動かせたり！
+                              ・VRChat想定(それ以外でも使用可、ただし設定は自力になります)
+                              ・3Dデータ形式：FBX ・ポリゴン合計：3778
+                              ・UnityPackageに全て封入 ・ModularAvatar対応
+                              https://modular-avatar.nadena.dev/ja/
+                              ・Shaderはliltoonを使用
+                              https://booth.pm/ja/items/3087170
+                            </p>
+                          </section>
+                          <section class="shop__text">
+                            <h2 class=
+                            "break-words font-bold leading-[32px] !m-0 pb-16 text-[24px] desktop:pb-8">
+                              ●サンプル動画
+                            </h2>
+                            <p class=
+                            "break-words font-noto-sans js-autolink !m-0 !p-0 whitespace-pre-line typography-14 desktop:typography-16">
+                              https://twitter.com/kuukuukon/status/1663167035986305026
+                              ※リプ欄に３つ参考動画 旧Versionのサンプル動画
+                              https://twitter.com/KuuKuuKon/status/1054728636278956035
+                              https://twitter.com/KuuKuuKon/status/1099275120294617089
+                            </p>
+                          </section>
+                          <section class="shop__text">
+                            <h2 class=
+                            "break-words font-bold leading-[32px] !m-0 pb-16 text-[24px] desktop:pb-8">
+                              ●利用規約 (Licence)
+                            </h2>
+                            <p class=
+                            "break-words font-noto-sans js-autolink !m-0 !p-0 whitespace-pre-line typography-14 desktop:typography-16">
+                              下記URLの利用規約をお読みください。
+                              購入した時点で同意したものとみなします。 日本語ライセンス
+                              https://drive.google.com/file/d/1vpJIdPSKVn4aFzvvueKjEkn6QFyCmjey/view?usp=sharing
+                              Licence(English)
+                              https://drive.google.com/file/d/1OMM2O8BNokdKvaFNGJ3Kg4O0rngidLBJ/view?usp=sharing
+                              疑問点や問い合わせ、質問等がありましたら Booth上か、
+                              Twitter：@kuukuukon
+                              にご連絡ください。(Twitterのほうが反応早いです)
+                            </p>
+                          </section>
+                          <section class="shop__text">
+                            <h2 class=
+                            "break-words font-bold leading-[32px] !m-0 pb-16 text-[24px] desktop:pb-8">
+                              ●更新
+                            </h2>
+                            <p class=
+                            "break-words font-noto-sans js-autolink !m-0 !p-0 whitespace-pre-line typography-14 desktop:typography-16">
+                              2018/10/27：Ver.1.01
+                              2019/02/20：Ver.2.00
+                              ポリゴン数増加、アニメーション複数追加
+                              2023/05/28：Ver3.00：ModularAvatar対応、VRChatAvatarDynamics対応、テクスチャー、シェーダー等色々変更、Animation変更
+                            </p>
+                          </section>
+                        </section>
+                      </div>
                     </div>
                   </div>
                   <div class="pt-8 pb-40 desktop:pt-40">
