--- a/VRChat/54/1065454.html
+++ b/VRChat/54/1065454.html
@@ -73,49 +73,27 @@
     <script id="shoplist_with_items" type="text/x-template">
     <div><div class="l-cards-4cols l-cards-sp-2cols"><shop-with-items :ga-params="gaParams" :key="shop.subdomain" :shop="shop" v-for="shop in visibleShops"></shop-with-items><shop-with-items :ga-params="gaParams" :key="shop.subdomain" :shop="shop" closed="" v-for="shop in moreShops" v-if="moreShops &amp;&amp; moreShopsVisible"></shop-with-items></div><div @click="moreShopsVisible = true" class="ellip-btn" v-if="moreShops &amp;&amp; !moreShopsVisible">もっと見る<i class="icon-arrow-open-down s-2x no-margin"></i></div></div>
     </script>
-  </head>
-  <body>
-    <div class="mini-player-controller" style="display: none;">
-      <a class="scroller" data-smooth-scroll="true"><img class=
-      "mini-player-controller__image" src=
-      "https://asset.booth.pm/assets/thumbnail_placeholder_c_300-09027647543d43ee525b2a7fe28d5ed5a3b6069d0c596c89b21776543ed1c0fe.png"></a><a class="scroller mini-player-information"
-      data-smooth-scroll="true">
-      <div class="mini-player-information__item-name"></div>
-      <div class="mini-player-information__shop-name"></div>
-      <div class="mini-player-information__navigation">
-        試聴中の商品へスクロール
-      </div></a>
-      <div class="mini-player-controls">
-        <div class="mini-player-mode-ui">
-          <div class="mini-player-mode-ui__knob"></div>
-          <div class="mini-player-mode-ui__short">
-            15秒
-          </div>
-          <div class="mini-player-mode-ui__full">
-            フル
-          </div>
-        </div>
-        <div class="mini-player-play-ui"></div>
-      </div>
-    </div>
     <meta content="initial-scale=1.0" id="viewport" name=
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/caabce76a16a06cb0535.js" defer=
+    "https://asset.booth.pm/assets/64e3f7d917c54e844730.js" defer=
     "defer" nonce=
-    "GzyuYC8n9ecncJLqOxeTdXvYoKZSmK0JqL1H1TvTxnI="></script>
+    "InA0R01uu9iaNIuWror3hdwoAxk2+LjqYMu27hw9UcI="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"AM_HF Blade \"Mayhem\"（対物高周波ブレード）","description":"Anti Material High Frequency Blade \n大型の刀身に振動剣の思想を取り入れた剣\n質量と、極限の切れ味を併せた一撃は鉄板すら容易く切り裂く\n\n機械化部隊に１人この剣を握る者がいたという\n敵戦闘車両の只中を走り抜け、すれ違いざまに戦車を破壊する姿に、恐れを持たぬ者はいなかった\n\nSketchfabで3Dモデルを閲覧することができます\n\nポリゴン数\n通常：△2842\n鞘収納状態：△2356\n\nテクスチャ数\n剣　2048*2048 3枚（3色のカラーバリエーションあり）\n鞘　2048*2048 3枚\n\n本体全長\n・Shortサイズ　1.24m\n・Largeサイズ　1.42m（刀身を延長）","url":"https://booth.pm/ja/items/1065454","offers":{"priceCurrency":"JPY","@type":"Offer","price":"400"},"image":"https://booth.pximg.net/c/620x620/719c3d6d-7dd0-4162-aa85-2ed21e39cf9a/i/1065454/f576c3e6-4bec-4004-9d4c-290fca0c2297_base_resized.jpg"}
     </script>
     <link rel="shortcut icon" type="image/x-icon" href=
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
-    "apple-touch-icon-precomposed"><noscript><iframe height="0"
-    src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
+    "apple-touch-icon-precomposed">
+  </head>
+  <body>
+    <noscript><iframe height="0" src=
+    "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="GzyuYC8n9ecncJLqOxeTdXvYoKZSmK0JqL1H1TvTxnI="></script>
+    nonce="InA0R01uu9iaNIuWror3hdwoAxk2+LjqYMu27hw9UcI="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -193,7 +171,7 @@
                           "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              49
+                              50
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -208,7 +186,7 @@
                           "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              49
+                              50
                             </div>
                           </div></a>
                         </div>
