updated at: 2023-05-31 21:49, VRchat向けの紫陽花(Hydrangea) - Imaginary Caravan by Coquelicotz - BOOTH

--- a/VRChat/27/1343227.html
+++ b/VRChat/27/1343227.html
@@ -8,7 +8,7 @@
       BOOTH
     </title>
     <meta name="description" content=
-    "VRChat向けの紫陽花です。 ライセンス：CC0 花の色は青、紫、ピンクからテクスチャを差し替えることで変更できます。 （Textureフォルダに各色のテクスチャがあります。デフォルトは青） ======================== Hydrangea for VRchat You can change flower color by replace texture file. (Watch Texture folder,you can find some flower color texture.default is blue) license:CC0">
+    "VRChat向けの紫陽花です。 ライセンス：CC0 花の色は青、紫、ピンクから選択することが出来ます。 ======================== Hydrangea for VRchat license:CC0">
     <meta name="keywords" content=
     "booth, ブース, pixiv, ピクシブ, イラスト, マンガ, 創作, オンラインストア, オンラインショップ, ネットショップ, ec, ネット通販">
     <link rel="canonical" href="https://booth.pm/ja/items/1343227">
@@ -17,16 +17,16 @@
     <meta name="twitter:title" content=
     "VRchat向けの紫陽花(Hydrangea) - Imaginary Caravan by Coquelicotz - BOOTH">
     <meta name="twitter:description" content=
-    "VRChat向けの紫陽花です。 ライセンス：CC0 花の色は青、紫、ピンクからテクスチャを差し替えることで変更できます。 （Textureフォルダに各色のテクスチャがあります。デフォルトは青） ======================== Hydrangea for VRchat You can change flower color by replace texture file. (Watch Texture folder,you can find some flower color texture.default is blue) license:CC0">
+    "VRChat向けの紫陽花です。 ライセンス：CC0 花の色は青、紫、ピンクから選択することが出来ます。 ======================== Hydrangea for VRchat license:CC0">
     <meta name="twitter:image" content=
-    "https://booth.pximg.net/c/620x620/e09ad4c5-32a4-417e-94ed-69b1d3251042/i/1343227/069ce3f4-e053-435d-87c7-077a28d54495_base_resized.jpg">
+    "https://booth.pximg.net/c/620x620/e09ad4c5-32a4-417e-94ed-69b1d3251042/i/1343227/f1684020-cc4d-4556-85f9-0ab29eda3b29_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
     "VRchat向けの紫陽花(Hydrangea) - Imaginary Caravan by Coquelicotz - BOOTH">
     <meta property="og:description" content=
-    "VRChat向けの紫陽花です。 ライセンス：CC0 花の色は青、紫、ピンクからテクスチャを差し替えることで変更できます。 （Textureフォルダに各色のテクスチャがあります。デフォルトは青） ======================== Hydrangea for VRchat You can change flower color by replace texture file. (Watch Texture folder,you can find some flower color texture.default is blue) license:CC0">
+    "VRChat向けの紫陽花です。 ライセンス：CC0 花の色は青、紫、ピンクから選択することが出来ます。 ======================== Hydrangea for VRchat license:CC0">
     <meta property="og:image" content=
-    "https://booth.pximg.net/c/620x620/e09ad4c5-32a4-417e-94ed-69b1d3251042/i/1343227/069ce3f4-e053-435d-87c7-077a28d54495_base_resized.jpg">
+    "https://booth.pximg.net/c/620x620/e09ad4c5-32a4-417e-94ed-69b1d3251042/i/1343227/f1684020-cc4d-4556-85f9-0ab29eda3b29_base_resized.jpg">
     <meta property="og:url" content=
     "https://booth.pm/ja/items/1343227">
     <meta name="robots" content="max-image-preview:large">
@@ -77,11 +77,11 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/caabce76a16a06cb0535.js" defer=
+    "https://asset.booth.pm/assets/64e3f7d917c54e844730.js" defer=
     "defer" nonce=
-    "vVFbsY+uvg9K3VPEuHpTj24deaYlp/JMoB3KeTE0asQ="></script>
+    "Yr/rGEviKcS0w2M5P6wEqvyfRL6zKwhZKui870Q54lw="></script>
     <script type="application/ld+json">
-    {"@context":"https://schema.org","@type":"Product","name":"VRchat向けの紫陽花(Hydrangea)","description":"VRChat向けの紫陽花です。\n\nライセンス：CC0\n\n花の色は青、紫、ピンクからテクスチャを差し替えることで変更できます。\n（Textureフォルダに各色のテクスチャがあります。デフォルトは青）\n\n========================\n\nHydrangea for VRchat\n\nYou can change flower color by replace texture file.\n(Watch Texture folder,you can find some flower color texture.default is blue)\n\nlicense:CC0\n","url":"https://booth.pm/ja/items/1343227","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/e09ad4c5-32a4-417e-94ed-69b1d3251042/i/1343227/069ce3f4-e053-435d-87c7-077a28d54495_base_resized.jpg"}
+    {"@context":"https://schema.org","@type":"Product","name":"VRchat向けの紫陽花(Hydrangea)","description":"VRChat向けの紫陽花です。\n\nライセンス：CC0\n\n花の色は青、紫、ピンクから選択することが出来ます。\n\n========================\n\nHydrangea for VRchat\n\nlicense:CC0\n","url":"https://booth.pm/ja/items/1343227","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/e09ad4c5-32a4-417e-94ed-69b1d3251042/i/1343227/f1684020-cc4d-4556-85f9-0ab29eda3b29_base_resized.jpg"}
     </script>
     <link rel="shortcut icon" type="image/x-icon" href=
     "https://asset.booth.pm/favicon.ico">
@@ -93,7 +93,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="vVFbsY+uvg9K3VPEuHpTj24deaYlp/JMoB3KeTE0asQ="></script>
+    nonce="Yr/rGEviKcS0w2M5P6wEqvyfRL6zKwhZKui870Q54lw="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -166,7 +166,7 @@
                           "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              536
+                              549
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -181,7 +181,7 @@
                           "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              536
+                              549
                             </div>
                           </div></a>
                         </div>
@@ -209,10 +209,8 @@
                                     <div class="cart-button-wrap">
                                       <a class=
                                       "btn add-cart full-length"
-                                      title=
-                                      "Coquelicotz_Ajisai_01.zip"
-                                      href=
-                                      "https://booth.pm/downloadables/601813">
+                                      title="Ajisai_rev2.zip" href=
+                                      "https://booth.pm/downloadables/3382265">
                                       <div class="u-d-block">
                                         <span class=
                                         "cmd-label">無料ダウンロード</span>
@@ -221,13 +219,13 @@
                                       "u-d-flex u-flex-wrap u-justify-content-center u-tpg-caption1 u-fw-normal">
                                         <div class=
                                         "u-text-ellipsis u-max-w-50">
-                                          Coquelicotz_Ajisai_01
+                                          Ajisai_rev2
                                         </div>
                                         <div>
                                           .zip
                                         </div>
                                         <div>
-                                          &nbsp;(1.35 MB)
+                                          &nbsp;(2.59 MB)
                                         </div>
                                       </div></a>
                                     </div>
@@ -265,31 +263,9 @@
                             <img alt="VRchat向けの紫陽花(Hydrangea)"
                             class="market-item-detail-item-image"
                             data-origin=
-                            "https://booth.pximg.net/e09ad4c5-32a4-417e-94ed-69b1d3251042/i/1343227/069ce3f4-e053-435d-87c7-077a28d54495.png"
+                            "https://booth.pximg.net/e09ad4c5-32a4-417e-94ed-69b1d3251042/i/1343227/f1684020-cc4d-4556-85f9-0ab29eda3b29.png"
                             src=
-                            "https://booth.pximg.net/e09ad4c5-32a4-417e-94ed-69b1d3251042/i/1343227/069ce3f4-e053-435d-87c7-077a28d54495_base_resized.jpg">
-                          </div>
-                        </div>
-                        <div>
-                          <div class=
-                          "market-item-detail-item-image-wrapper">
-                            <img alt="VRchat向けの紫陽花(Hydrangea)"
-                            class="market-item-detail-item-image"
-                            data-lazy=
-                            "https://booth.pximg.net/e09ad4c5-32a4-417e-94ed-69b1d3251042/i/1343227/2394c01a-f8b2-4753-a1cf-e28c49bcda75_base_resized.jpg"
-                            data-origin=
-                            "https://booth.pximg.net/e09ad4c5-32a4-417e-94ed-69b1d3251042/i/1343227/2394c01a-f8b2-4753-a1cf-e28c49bcda75.png">
-                          </div>
-                        </div>
-                        <div>
-                          <div class=
-                          "market-item-detail-item-image-wrapper">
-                            <img alt="VRchat向けの紫陽花(Hydrangea)"
-                            class="market-item-detail-item-image"
-                            data-lazy=
-                            "https://booth.pximg.net/e09ad4c5-32a4-417e-94ed-69b1d3251042/i/1343227/e4e4e6a1-b1e8-482e-8073-997edf6c60aa_base_resized.jpg"
-                            data-origin=
-                            "https://booth.pximg.net/e09ad4c5-32a4-417e-94ed-69b1d3251042/i/1343227/e4e4e6a1-b1e8-482e-8073-997edf6c60aa.png">
+                            "https://booth.pximg.net/e09ad4c5-32a4-417e-94ed-69b1d3251042/i/1343227/f1684020-cc4d-4556-85f9-0ab29eda3b29_base_resized.jpg">
                           </div>
                         </div>
                       </div>
@@ -298,15 +274,7 @@
                         <a class="pointer">
                         <div class="slick-thumbnail-border">
                           <img src=
-                          "https://booth.pximg.net/c/72x72_a2_g5/e09ad4c5-32a4-417e-94ed-69b1d3251042/i/1343227/069ce3f4-e053-435d-87c7-077a28d54495_base_resized.jpg">
-                        </div></a><a class="pointer">
-                        <div class="slick-thumbnail-border">
-                          <img src=
-                          "https://booth.pximg.net/c/72x72_a2_g5/e09ad4c5-32a4-417e-94ed-69b1d3251042/i/1343227/2394c01a-f8b2-4753-a1cf-e28c49bcda75_base_resized.jpg">
-                        </div></a><a class="pointer">
-                        <div class="slick-thumbnail-border">
-                          <img src=
-                          "https://booth.pximg.net/c/72x72_a2_g5/e09ad4c5-32a4-417e-94ed-69b1d3251042/i/1343227/e4e4e6a1-b1e8-482e-8073-997edf6c60aa_base_resized.jpg">
+                          "https://booth.pximg.net/c/72x72_a2_g5/e09ad4c5-32a4-417e-94ed-69b1d3251042/i/1343227/f1684020-cc4d-4556-85f9-0ab29eda3b29_base_resized.jpg">
                         </div></a>
                       </div>
                       <section class="main-info-column">
@@ -315,13 +283,9 @@
                           <p class=
                           "autolink break-words font-noto-sans typography-16 whitespace-pre-line">
                             VRChat向けの紫陽花です。 ライセンス：CC0
-                            花の色は青、紫、ピンクからテクスチャを差し替えることで変更できます。
-                            （Textureフォルダに各色のテクスチャがあります。デフォルトは青）
+                            花の色は青、紫、ピンクから選択することが出来ます。
                             ======================== Hydrangea for
-                            VRchat You can change flower color by
-                            replace texture file. (Watch Texture
-                            folder,you can find some flower color
-                            texture.default is blue) license:CC0
+                            VRchat license:CC0
                           </p>
                         </div>
                       </section>
