--- a/VRChat/44/1342244.html
+++ b/VRChat/44/1342244.html
@@ -72,27 +72,49 @@
     <script id="shoplist_with_items" type="text/x-template">
     <div><div class="l-cards-4cols l-cards-sp-2cols"><shop-with-items :ga-params="gaParams" :key="shop.subdomain" :shop="shop" v-for="shop in visibleShops"></shop-with-items><shop-with-items :ga-params="gaParams" :key="shop.subdomain" :shop="shop" closed="" v-for="shop in moreShops" v-if="moreShops &amp;&amp; moreShopsVisible"></shop-with-items></div><div @click="moreShopsVisible = true" class="ellip-btn" v-if="moreShops &amp;&amp; !moreShopsVisible">もっと見る<i class="icon-arrow-open-down s-2x no-margin"></i></div></div>
     </script>
+  </head>
+  <body>
+    <div class="mini-player-controller" style="display: none;">
+      <a class="scroller" data-smooth-scroll="true"><img class=
+      "mini-player-controller__image" src=
+      "https://asset.booth.pm/assets/thumbnail_placeholder_c_300-09027647543d43ee525b2a7fe28d5ed5a3b6069d0c596c89b21776543ed1c0fe.png"></a><a class="scroller mini-player-information"
+      data-smooth-scroll="true">
+      <div class="mini-player-information__item-name"></div>
+      <div class="mini-player-information__shop-name"></div>
+      <div class="mini-player-information__navigation">
+        試聴中の商品へスクロール
+      </div></a>
+      <div class="mini-player-controls">
+        <div class="mini-player-mode-ui">
+          <div class="mini-player-mode-ui__knob"></div>
+          <div class="mini-player-mode-ui__short">
+            15秒
+          </div>
+          <div class="mini-player-mode-ui__full">
+            フル
+          </div>
+        </div>
+        <div class="mini-player-play-ui"></div>
+      </div>
+    </div>
     <meta content="initial-scale=1.0" id="viewport" name=
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/caabce76a16a06cb0535.js" defer=
+    "https://asset.booth.pm/assets/64e3f7d917c54e844730.js" defer=
     "defer" nonce=
-    "gmZdjttmU94G+cISHPQBuVo7nhFJaAEDmSqRt/HBT7c="></script>
+    "TzhsLIHzlD+7MtBDr5yo0C9Hia1HjMeSpDlCjh/swdQ="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"伸びたりちぢんだりケース","description":"大切なものを入れるのに適してそうな見た目のかばんというかケースの3Dモデルです。\nがっつり開けられたりシェイプキーで長さと持ち手の大きさの調整ができます。\n本体の.fbxファイルとテクスチャおよびそのUV展開図の.pngファイルを綴じたunitypackageが入っています。\n大切な武器をしまったり、汚れたお金の取引を行う際にご利用ください。\n\n当モデルを使用したゲーム作品や映像作品での収益化は自由です。\n\nまた、テクスチャやモデル諸々の改変も自由ですが、再配布ができる形でのアップロードはお控えください。","url":"https://booth.pm/ja/items/1342244","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/59cf5824-c16e-422b-929f-f968efccb887/i/1342244/355852ac-a44e-4e22-915a-17532281fe50_base_resized.jpg"}
     </script>
     <link rel="shortcut icon" type="image/x-icon" href=
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
-    "apple-touch-icon-precomposed">
-  </head>
-  <body>
-    <noscript><iframe height="0" src=
-    "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
+    "apple-touch-icon-precomposed"><noscript><iframe height="0"
+    src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="gmZdjttmU94G+cISHPQBuVo7nhFJaAEDmSqRt/HBT7c="></script>
+    nonce="TzhsLIHzlD+7MtBDr5yo0C9Hia1HjMeSpDlCjh/swdQ="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
